--- a/test_1q.ipynb
+++ b/test_1q.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "897bbb12-eb17-4bcc-9c6f-0de9ec12c147",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tableaus import *"
+    "from tableaus import *\n",
+    "from tableau_cls import Tableau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "836575bf-a518-41da-9ace-052d3bf25734",
    "metadata": {},
    "outputs": [
@@ -24,7 +25,7 @@
        "       [1, 0, 0]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +44,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "41ada793-5ba8-4175-8cd5-88a2027b2fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Stabilizers: ['+X']\n",
+       "Destabilizers: ['+Z']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab = Tableau(tester)\n",
+    "tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14a1f3b1-2094-4ce0-b8e3-da9bae4a7efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Stabilizers: ['+Z']\n",
+       "Destabilizers: ['+X']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab.H(0)\n",
+    "tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "d8d5b6b7-e8a2-4ef1-b8d7-077147ed44f2",
    "metadata": {},
    "outputs": [],
@@ -56,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "b087ee9c-69f6-4dc4-8226-1fa5cf51d23f",
    "metadata": {},
    "outputs": [],
@@ -70,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "282d1f7a-10cc-4b76-b1e1-6d42eee7c6cf",
    "metadata": {},
    "outputs": [
@@ -78,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stabilizer: +X Destabilizer: +Z\n"
+      "Stabilizer: +Z Destabilizer: +X\n"
      ]
     }
    ],
@@ -88,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "eaf83d9d-9a06-4468-81e9-30e3fbd91031",
    "metadata": {},
    "outputs": [
@@ -96,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stabilizers: ['+X'] Destabilizers: ['+Z']\n"
+      "Stabilizers: ['+Z'] Destabilizers: ['+X']\n"
      ]
     }
    ],
@@ -106,17 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "39b68d46-1d87-4c0c-9957-dc692acb0894",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'+X'"
+       "'+Z'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,18 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "91b0f63d-3859-4c71-9294-f493be932444",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 0],\n",
-       "       [1, 0, 0]])"
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "44e40571-24b3-4603-8191-d6c6afa28833",
    "metadata": {},
    "outputs": [],
@@ -159,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "18587896-7c22-4e96-93b2-2c6009ff31ac",
    "metadata": {},
    "outputs": [
@@ -172,7 +219,7 @@
        "       [0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "adc266c5-eb07-47d0-9068-3fccdd92d886",
    "metadata": {},
    "outputs": [
@@ -194,7 +241,7 @@
        "       [1, 1, 1]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,18 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "f1d47f3a-0cc3-4ce5-89b8-c33a2e6396f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 0],\n",
-       "       [1, 0, 0]])"
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,26 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "1ac9346f-5755-46ea-9a39-8d0d53a569f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_tab = np.eye(200, dtype=int)[0:199,:]"
+    "init_tab = np.eye(5, dtype=int)[0:4,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "f2f219b9-5ef0-4521-b48b-3d1392fd6302",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 110 ms, sys: 9.98 ms, total: 120 ms\n",
-      "Wall time: 115 ms\n"
+     "ename": "IndexError",
+     "evalue": "index 42 is out of bounds for axis 1 with size 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:2\u001b[0m\n",
+      "File \u001b[0;32m~/Documents/GitHub/CliffordSim/tableaus.py:11\u001b[0m, in \u001b[0;36mCNOT\u001b[0;34m(tableau, control, target)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mCNOT\u001b[39m(tableau, control, target):\n\u001b[1;32m     10\u001b[0m     n \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(tableau[\u001b[38;5;241m0\u001b[39m,:]))\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 11\u001b[0m     za \u001b[38;5;241m=\u001b[39m tableau[:,control]\n\u001b[1;32m     12\u001b[0m     xa \u001b[38;5;241m=\u001b[39m tableau[:,n\u001b[38;5;241m+\u001b[39mcontrol]\n\u001b[1;32m     13\u001b[0m     zb \u001b[38;5;241m=\u001b[39m tableau[:,target]\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 42 is out of bounds for axis 1 with size 5"
      ]
     }
    ],
@@ -258,40 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "e9ba6771-a1b7-4af0-9b63-287202107ff3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 199 is out of bounds for axis 0 with size 199",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m print_tab(init_tab)\n",
-      "File \u001b[0;32m~/Documents/GitHub/CliffordSim/tableaus.py:55\u001b[0m, in \u001b[0;36mprint_tab\u001b[0;34m(tableau)\u001b[0m\n\u001b[1;32m     53\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(tableau[\u001b[38;5;241m0\u001b[39m,:])\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     54\u001b[0m stabilizers \u001b[38;5;241m=\u001b[39m [tab_row_to_str(tableau[i,:]) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n)]\n\u001b[0;32m---> 55\u001b[0m destabilizers \u001b[38;5;241m=\u001b[39m [tab_row_to_str(tableau[i\u001b[38;5;241m+\u001b[39mn,:]) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n)]\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStabilizers:\u001b[39m\u001b[38;5;124m\"\u001b[39m, stabilizers, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDestabilizers:\u001b[39m\u001b[38;5;124m\"\u001b[39m, destabilizers)\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 199 is out of bounds for axis 0 with size 199"
-     ]
-    }
-   ],
-   "source": [
-    "print_tab(init_tab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "9ef8e9a9-be9d-4af3-a6cb-a853b92ce508",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "2"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "38e6b0e3-0df1-4ac1-aae0-790b769cdd0e",
    "metadata": {},
    "outputs": [
@@ -312,7 +340,7 @@
        "[2, 3]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +351,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b3280d37-b33d-4be7-8dc1-57f00820714f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '_swap' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m vec1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m vec2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m vec1,vec2 \u001b[38;5;241m=\u001b[39m _swap(vec1,vec2)\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_swap' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "vec1 = [1,2,3]\n",
+    "vec2 = [4,5,6]\n",
+    "vec1,vec2 = _swap(vec1,vec2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d3a58fa2-b3ab-4bcb-91f2-2d9ed7fa233f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vec1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "397f9be8-d1e8-4884-8dcb-605be5018f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_test = Tableau(init_tab)\n",
+    "tab_test.CX(0,1)\n",
+    "tab_test.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e571ce5-817f-4eb4-9bf7-090349259516",
    "metadata": {},
    "outputs": [],
    "source": []
