--- a/test_1q.ipynb
+++ b/test_1q.ipynb
@@ -196,30 +196,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "44e40571-24b3-4603-8191-d6c6afa28833",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tester_2 = np.eye(5, dtype=int)[0:4,:]"
+    "tester_2 = np.eye(2000, dtype=int)[0:1999,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "18587896-7c22-4e96-93b2-2c6009ff31ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, 0, 0],\n",
-       "       [1, 1, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 0],\n",
-       "       [0, 0, 0, 1, 0]])"
+       "array([[1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 1, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 1, 0]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +426,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6159df3-6439-42a0-8c8f-b163303b91d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "id": "9e571ce5-817f-4eb4-9bf7-090349259516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1999"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_qubits = 2000\n",
+    "cnot_count = 10000\n",
+    "tempvar = 0\n",
+    "init_data = np.eye(2*num_qubits, dtype=int)[0:2*num_qubits-1 ,:]\n",
+    "init_tab = Tableau(init_data)\n",
+    "init_tab.num_qubits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "3cc6bc04-bd84-4404-bafa-454cf1a15c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randints = [{'control':np.random.randint(num_qubits), 'target':np.random.randint(num_qubits)} for i in range(cnot_count)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "c1e39a90-717e-4c33-a8cd-ad68171eafee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.47 s, sys: 5.18 ms, total: 1.47 s\n",
+      "Wall time: 1.48 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for randint in randints:\n",
+    "    init_tab.CX(**randint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "2ace2eaf-4c6a-41ab-a49a-94aa666d2245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.55 s, sys: 2.96 ms, total: 1.55 s\n",
+      "Wall time: 1.55 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for randint in randints:\n",
+    "    tempvar = CNOT(init_data,**randint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "42b8564b-5e98-4b9c-9607-9bdda8da999d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(tempvar,init_tab.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76d4b87c-7af9-4182-89c2-71fea841db68",
    "metadata": {},
    "outputs": [],
    "source": []
