deleted old `tableaus.py` file

--- a/test_1q.ipynb
+++ b/test_1q.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "897bbb12-eb17-4bcc-9c6f-0de9ec12c147",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "836575bf-a518-41da-9ace-052d3bf25734",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "       [1, 0, 0]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "41ada793-5ba8-4175-8cd5-88a2027b2fbf",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "Destabilizers: ['+Z']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "14a1f3b1-2094-4ce0-b8e3-da9bae4a7efa",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "Destabilizers: ['+X']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "d8d5b6b7-e8a2-4ef1-b8d7-077147ed44f2",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "b087ee9c-69f6-4dc4-8226-1fa5cf51d23f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "282d1f7a-10cc-4b76-b1e1-6d42eee7c6cf",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "eaf83d9d-9a06-4468-81e9-30e3fbd91031",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "39b68d46-1d87-4c0c-9957-dc692acb0894",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "'+Z'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "91b0f63d-3859-4c71-9294-f493be932444",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "       [0, 1, 0]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "id": "44e40571-24b3-4603-8191-d6c6afa28833",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "18587896-7c22-4e96-93b2-2c6009ff31ac",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "       [0, 0, 0, ..., 0, 1, 0]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "adc266c5-eb07-47d0-9068-3fccdd92d886",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "       [1, 1, 1]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "f1d47f3a-0cc3-4ce5-89b8-c33a2e6396f0",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "       [0, 1, 0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "1ac9346f-5755-46ea-9a39-8d0d53a569f5",
    "metadata": {},
    "outputs": [],
@@ -287,20 +287,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "f2f219b9-5ef0-4521-b48b-3d1392fd6302",
    "metadata": {},
    "outputs": [
     {
      "ename": "IndexError",
-     "evalue": "index 42 is out of bounds for axis 1 with size 5",
+     "evalue": "index 21 is out of bounds for axis 1 with size 5",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
       "File \u001b[0;32m<timed exec>:2\u001b[0m\n",
       "File \u001b[0;32m~/Documents/GitHub/CliffordSim/tableaus.py:11\u001b[0m, in \u001b[0;36mCNOT\u001b[0;34m(tableau, control, target)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mCNOT\u001b[39m(tableau, control, target):\n\u001b[1;32m     10\u001b[0m     n \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(tableau[\u001b[38;5;241m0\u001b[39m,:]))\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 11\u001b[0m     za \u001b[38;5;241m=\u001b[39m tableau[:,control]\n\u001b[1;32m     12\u001b[0m     xa \u001b[38;5;241m=\u001b[39m tableau[:,n\u001b[38;5;241m+\u001b[39mcontrol]\n\u001b[1;32m     13\u001b[0m     zb \u001b[38;5;241m=\u001b[39m tableau[:,target]\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 42 is out of bounds for axis 1 with size 5"
+      "\u001b[0;31mIndexError\u001b[0m: index 21 is out of bounds for axis 1 with size 5"
      ]
     }
    ],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "id": "9ef8e9a9-be9d-4af3-a6cb-a853b92ce508",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "38e6b0e3-0df1-4ac1-aae0-790b769cdd0e",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "[2, 3]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "b3280d37-b33d-4be7-8dc1-57f00820714f",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m vec1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m vec2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m vec1,vec2 \u001b[38;5;241m=\u001b[39m _swap(vec1,vec2)\n",
+      "Cell \u001b[0;32mIn[46], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m vec1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m vec2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m vec1,vec2 \u001b[38;5;241m=\u001b[39m _swap(vec1,vec2)\n",
       "\u001b[0;31mNameError\u001b[0m: name '_swap' is not defined"
      ]
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "d3a58fa2-b3ab-4bcb-91f2-2d9ed7fa233f",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "397f9be8-d1e8-4884-8dcb-605be5018f54",
    "metadata": {},
    "outputs": [
@@ -407,12 +407,12 @@
      "data": {
       "text/plain": [
        "array([[1, 0, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
+       "       [1, 1, 0, 0, 0],\n",
+       "       [0, 0, 1, 1, 0],\n",
        "       [0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 49,
    "id": "9e571ce5-817f-4eb4-9bf7-090349259516",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "1999"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 50,
    "id": "3cc6bc04-bd84-4404-bafa-454cf1a15c7d",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 51,
    "id": "c1e39a90-717e-4c33-a8cd-ad68171eafee",
    "metadata": {},
    "outputs": [
@@ -477,8 +477,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.47 s, sys: 5.18 ms, total: 1.47 s\n",
-      "Wall time: 1.48 s\n"
+      "CPU times: user 1.48 s, sys: 61.3 ms, total: 1.55 s\n",
+      "Wall time: 1.55 s\n"
      ]
     }
    ],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 52,
    "id": "2ace2eaf-4c6a-41ab-a49a-94aa666d2245",
    "metadata": {},
    "outputs": [
@@ -498,8 +498,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.55 s, sys: 2.96 ms, total: 1.55 s\n",
-      "Wall time: 1.55 s\n"
+      "CPU times: user 1.53 s, sys: 8.9 ms, total: 1.54 s\n",
+      "Wall time: 1.54 s\n"
      ]
     }
    ],
@@ -532,8 +532,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "76d4b87c-7af9-4182-89c2-71fea841db68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1999"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init_tab.num_qubits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a3457f7e-fa42-4577-934c-7727df43b55a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_tab.H(1550)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "11e9f910-a808-4769-9152-4f6a1dd295d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_tab.CZ(2,777)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c11bfe79-277f-459e-acb4-d4449d0e6e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_tab.CX(2,222)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fac588e1-5c7b-4f9a-a1bd-ab5bf3bf2b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_tab.S(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46358e0c-cd62-401e-8a84-8b5b364f0f3c",
    "metadata": {},
    "outputs": [],
    "source": []
